parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> assignment SEMICOLON
Rule 2     calc -> assignment SEMICOLON calc
Rule 3     calc -> declaration SEMICOLON
Rule 4     calc -> declaration SEMICOLON calc
Rule 5     calc -> variable_update SEMICOLON
Rule 6     calc -> variable_update SEMICOLON calc
Rule 7     calc -> expression SEMICOLON
Rule 8     calc -> expression SEMICOLON calc
Rule 9     calc -> printoutput SEMICOLON
Rule 10    calc -> printoutput SEMICOLON calc
Rule 11    calc -> dowhile_expression SEMICOLON
Rule 12    calc -> dowhile_expression SEMICOLON calc
Rule 13    calc -> increment SEMICOLON
Rule 14    calc -> increment SEMICOLON calc
Rule 15    calc -> decrement SEMICOLON
Rule 16    calc -> decrement SEMICOLON calc
Rule 17    calc -> struct SEMICOLON
Rule 18    calc -> struct SEMICOLON calc
Rule 19    var -> NAME
Rule 20    printoutput -> PRINT LB printexpression RB
Rule 21    printexpression -> expression
Rule 22    printexpression -> expression COMMA printexpression
Rule 23    expression -> var
Rule 24    expression -> CHAR
Rule 25    expression -> double_expression
Rule 26    expression -> int_expression
Rule 27    expression -> string_expression
Rule 28    expression -> bool_expression
Rule 29    declaration -> DOUBLE_TYPE NAME
Rule 30    declaration -> INT_TYPE NAME
Rule 31    declaration -> STRING_TYPE NAME
Rule 32    declaration -> CHARACTER_TYPE NAME
Rule 33    declaration -> BOOL_TYPE NAME
Rule 34    declaration -> NAME NAME
Rule 35    declaration -> empty
Rule 36    assignment -> DOUBLE_TYPE NAME ASSIGNMENT double_expression
Rule 37    assignment -> INT_TYPE NAME ASSIGNMENT int_expression
Rule 38    assignment -> STRING_TYPE NAME ASSIGNMENT string_expression
Rule 39    assignment -> CHARACTER_TYPE NAME ASSIGNMENT CHAR
Rule 40    assignment -> BOOL_TYPE NAME ASSIGNMENT bool_expression
Rule 41    assignment -> empty
Rule 42    variable_update -> NAME ASSIGNMENT double_expression
Rule 43    variable_update -> NAME ASSIGNMENT int_expression
Rule 44    variable_update -> NAME ASSIGNMENT string_expression
Rule 45    variable_update -> NAME ASSIGNMENT CHAR
Rule 46    variable_update -> NAME ASSIGNMENT bool_expression
Rule 47    double_expression -> DOUBLE
Rule 48    double_expression -> var
Rule 49    double_expression -> double_expression PLUS double_expression
Rule 50    double_expression -> double_expression MINUS double_expression
Rule 51    double_expression -> double_expression MULTIPLY double_expression
Rule 52    double_expression -> double_expression DIVIDE double_expression
Rule 53    double_expression -> double_expression MOD double_expression
Rule 54    double_expression -> double_expression POWER double_expression
Rule 55    double_expression -> LB double_expression RB
Rule 56    int_expression -> INT
Rule 57    int_expression -> var
Rule 58    int_expression -> int_expression PLUS int_expression
Rule 59    int_expression -> int_expression MINUS int_expression
Rule 60    int_expression -> int_expression MULTIPLY int_expression
Rule 61    int_expression -> int_expression DIVIDE int_expression
Rule 62    int_expression -> int_expression MOD int_expression
Rule 63    int_expression -> int_expression POWER int_expression
Rule 64    int_expression -> LB int_expression RB
Rule 65    bool_expression -> BOOL
Rule 66    bool_expression -> var
Rule 67    bool_expression -> bool_expression OR bool_expression
Rule 68    bool_expression -> bool_expression AND bool_expression
Rule 69    bool_expression -> expression LESS expression
Rule 70    bool_expression -> expression LESSEQUAL expression
Rule 71    bool_expression -> expression GREATER expression
Rule 72    bool_expression -> expression GREATEREQUAL expression
Rule 73    bool_expression -> expression EQUALITY expression
Rule 74    bool_expression -> NOT bool_expression
Rule 75    bool_expression -> LB bool_expression RB
Rule 76    string_expression -> STRING
Rule 77    string_expression -> var
Rule 78    string_expression -> string_expression PLUS string_expression
Rule 79    code -> assignment SEMICOLON
Rule 80    code -> declaration SEMICOLON
Rule 81    code -> variable_update SEMICOLON
Rule 82    code -> increment SEMICOLON
Rule 83    code -> decrement SEMICOLON
Rule 84    code -> printoutput SEMICOLON
Rule 85    insidewhile -> code
Rule 86    insidewhile -> code insidewhile
Rule 87    operator -> LESS
Rule 88    operator -> LESSEQUAL
Rule 89    operator -> GREATER
Rule 90    operator -> GREATEREQUAL
Rule 91    operator -> EQUALITY
Rule 92    condition -> int_expression operator int_expression
Rule 93    condition -> LB condition RB
Rule 94    dowhile_expression -> DO LP insidewhile RP WHILE LB condition RB
Rule 95    dowhile_expression -> DO LP dowhile_expression RP WHILE LB condition RB
Rule 96    structcode -> declaration SEMICOLON
Rule 97    structcode -> assignment SEMICOLON
Rule 98    insidestruct -> structcode
Rule 99    insidestruct -> structcode insidestruct
Rule 100   struct -> STRUCT NAME LP insidestruct RP
Rule 101   increment -> int_expression INCREMENT
Rule 102   decrement -> int_expression DECREMENT
Rule 103   empty -> <empty>

Terminals, with rules where they appear

AND                  : 68
ASSIGNMENT           : 36 37 38 39 40 42 43 44 45 46
BOOL                 : 65
BOOL_TYPE            : 33 40
CHAR                 : 24 39 45
CHARACTER_TYPE       : 32 39
COMMA                : 22
DECREMENT            : 102
DIVIDE               : 52 61
DO                   : 94 95
DOUBLE               : 47
DOUBLE_TYPE          : 29 36
EQUALITY             : 73 91
GREATER              : 71 89
GREATEREQUAL         : 72 90
INCREMENT            : 101
INT                  : 56
INT_TYPE             : 30 37
LB                   : 20 55 64 75 93 94 95
LESS                 : 69 87
LESSEQUAL            : 70 88
LP                   : 94 95 100
MINUS                : 50 59
MOD                  : 53 62
MULTIPLY             : 51 60
NAME                 : 19 29 30 31 32 33 34 34 36 37 38 39 40 42 43 44 45 46 100
NOT                  : 74
OR                   : 67
PLUS                 : 49 58 78
POWER                : 54 63
PRINT                : 20
RB                   : 20 55 64 75 93 94 95
RP                   : 94 95 100
SEMICOLON            : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 79 80 81 82 83 84 96 97
STRING               : 76
STRING_TYPE          : 31 38
STRUCT               : 100
WHILE                : 94 95
error                : 

Nonterminals, with rules where they appear

assignment           : 1 2 79 97
bool_expression      : 28 40 46 67 67 68 68 74 75
calc                 : 2 4 6 8 10 12 14 16 18 0
code                 : 85 86
condition            : 93 94 95
declaration          : 3 4 80 96
decrement            : 15 16 83
double_expression    : 25 36 42 49 49 50 50 51 51 52 52 53 53 54 54 55
dowhile_expression   : 11 12 95
empty                : 35 41
expression           : 7 8 21 22 69 69 70 70 71 71 72 72 73 73
increment            : 13 14 82
insidestruct         : 99 100
insidewhile          : 86 94
int_expression       : 26 37 43 58 58 59 59 60 60 61 61 62 62 63 63 64 92 92 101 102
operator             : 92
printexpression      : 20 22
printoutput          : 9 10 84
string_expression    : 27 38 44 78 78
struct               : 17 18
structcode           : 98 99
var                  : 23 48 57 66 77
variable_update      : 5 6 81

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . assignment SEMICOLON
    (2) calc -> . assignment SEMICOLON calc
    (3) calc -> . declaration SEMICOLON
    (4) calc -> . declaration SEMICOLON calc
    (5) calc -> . variable_update SEMICOLON
    (6) calc -> . variable_update SEMICOLON calc
    (7) calc -> . expression SEMICOLON
    (8) calc -> . expression SEMICOLON calc
    (9) calc -> . printoutput SEMICOLON
    (10) calc -> . printoutput SEMICOLON calc
    (11) calc -> . dowhile_expression SEMICOLON
    (12) calc -> . dowhile_expression SEMICOLON calc
    (13) calc -> . increment SEMICOLON
    (14) calc -> . increment SEMICOLON calc
    (15) calc -> . decrement SEMICOLON
    (16) calc -> . decrement SEMICOLON calc
    (17) calc -> . struct SEMICOLON
    (18) calc -> . struct SEMICOLON calc
    (36) assignment -> . DOUBLE_TYPE NAME ASSIGNMENT double_expression
    (37) assignment -> . INT_TYPE NAME ASSIGNMENT int_expression
    (38) assignment -> . STRING_TYPE NAME ASSIGNMENT string_expression
    (39) assignment -> . CHARACTER_TYPE NAME ASSIGNMENT CHAR
    (40) assignment -> . BOOL_TYPE NAME ASSIGNMENT bool_expression
    (41) assignment -> . empty
    (29) declaration -> . DOUBLE_TYPE NAME
    (30) declaration -> . INT_TYPE NAME
    (31) declaration -> . STRING_TYPE NAME
    (32) declaration -> . CHARACTER_TYPE NAME
    (33) declaration -> . BOOL_TYPE NAME
    (34) declaration -> . NAME NAME
    (35) declaration -> . empty
    (42) variable_update -> . NAME ASSIGNMENT double_expression
    (43) variable_update -> . NAME ASSIGNMENT int_expression
    (44) variable_update -> . NAME ASSIGNMENT string_expression
    (45) variable_update -> . NAME ASSIGNMENT CHAR
    (46) variable_update -> . NAME ASSIGNMENT bool_expression
    (23) expression -> . var
    (24) expression -> . CHAR
    (25) expression -> . double_expression
    (26) expression -> . int_expression
    (27) expression -> . string_expression
    (28) expression -> . bool_expression
    (20) printoutput -> . PRINT LB printexpression RB
    (94) dowhile_expression -> . DO LP insidewhile RP WHILE LB condition RB
    (95) dowhile_expression -> . DO LP dowhile_expression RP WHILE LB condition RB
    (101) increment -> . int_expression INCREMENT
    (102) decrement -> . int_expression DECREMENT
    (100) struct -> . STRUCT NAME LP insidestruct RP
    (103) empty -> .
    (19) var -> . NAME
    (47) double_expression -> . DOUBLE
    (48) double_expression -> . var
    (49) double_expression -> . double_expression PLUS double_expression
    (50) double_expression -> . double_expression MINUS double_expression
    (51) double_expression -> . double_expression MULTIPLY double_expression
    (52) double_expression -> . double_expression DIVIDE double_expression
    (53) double_expression -> . double_expression MOD double_expression
    (54) double_expression -> . double_expression POWER double_expression
    (55) double_expression -> . LB double_expression RB
    (56) int_expression -> . INT
    (57) int_expression -> . var
    (58) int_expression -> . int_expression PLUS int_expression
    (59) int_expression -> . int_expression MINUS int_expression
    (60) int_expression -> . int_expression MULTIPLY int_expression
    (61) int_expression -> . int_expression DIVIDE int_expression
    (62) int_expression -> . int_expression MOD int_expression
    (63) int_expression -> . int_expression POWER int_expression
    (64) int_expression -> . LB int_expression RB
    (76) string_expression -> . STRING
    (77) string_expression -> . var
    (78) string_expression -> . string_expression PLUS string_expression
    (65) bool_expression -> . BOOL
    (66) bool_expression -> . var
    (67) bool_expression -> . bool_expression OR bool_expression
    (68) bool_expression -> . bool_expression AND bool_expression
    (69) bool_expression -> . expression LESS expression
    (70) bool_expression -> . expression LESSEQUAL expression
    (71) bool_expression -> . expression GREATER expression
    (72) bool_expression -> . expression GREATEREQUAL expression
    (73) bool_expression -> . expression EQUALITY expression
    (74) bool_expression -> . NOT bool_expression
    (75) bool_expression -> . LB bool_expression RB

    DOUBLE_TYPE     shift and go to state 11
    INT_TYPE        shift and go to state 14
    STRING_TYPE     shift and go to state 16
    CHARACTER_TYPE  shift and go to state 18
    BOOL_TYPE       shift and go to state 20
    NAME            shift and go to state 12
    CHAR            shift and go to state 19
    PRINT           shift and go to state 24
    DO              shift and go to state 26
    STRUCT          shift and go to state 27
    SEMICOLON       reduce using rule 103 (empty -> .)
    DOUBLE          shift and go to state 28
    LB              shift and go to state 25
    INT             shift and go to state 29
    STRING          shift and go to state 30
    BOOL            shift and go to state 31
    NOT             shift and go to state 32

    calc                           shift and go to state 1
    assignment                     shift and go to state 2
    declaration                    shift and go to state 3
    variable_update                shift and go to state 4
    expression                     shift and go to state 5
    printoutput                    shift and go to state 6
    dowhile_expression             shift and go to state 7
    increment                      shift and go to state 8
    decrement                      shift and go to state 9
    struct                         shift and go to state 10
    double_expression              shift and go to state 13
    int_expression                 shift and go to state 15
    string_expression              shift and go to state 17
    bool_expression                shift and go to state 21
    empty                          shift and go to state 22
    var                            shift and go to state 23

state 1

    (0) S' -> calc .



state 2

    (1) calc -> assignment . SEMICOLON
    (2) calc -> assignment . SEMICOLON calc

    SEMICOLON       shift and go to state 33


state 3

    (3) calc -> declaration . SEMICOLON
    (4) calc -> declaration . SEMICOLON calc

    SEMICOLON       shift and go to state 34


state 4

    (5) calc -> variable_update . SEMICOLON
    (6) calc -> variable_update . SEMICOLON calc

    SEMICOLON       shift and go to state 35


state 5

    (7) calc -> expression . SEMICOLON
    (8) calc -> expression . SEMICOLON calc
    (69) bool_expression -> expression . LESS expression
    (70) bool_expression -> expression . LESSEQUAL expression
    (71) bool_expression -> expression . GREATER expression
    (72) bool_expression -> expression . GREATEREQUAL expression
    (73) bool_expression -> expression . EQUALITY expression

    SEMICOLON       shift and go to state 36
    LESS            shift and go to state 37
    LESSEQUAL       shift and go to state 38
    GREATER         shift and go to state 39
    GREATEREQUAL    shift and go to state 40
    EQUALITY        shift and go to state 41


state 6

    (9) calc -> printoutput . SEMICOLON
    (10) calc -> printoutput . SEMICOLON calc

    SEMICOLON       shift and go to state 42


state 7

    (11) calc -> dowhile_expression . SEMICOLON
    (12) calc -> dowhile_expression . SEMICOLON calc

    SEMICOLON       shift and go to state 43


state 8

    (13) calc -> increment . SEMICOLON
    (14) calc -> increment . SEMICOLON calc

    SEMICOLON       shift and go to state 44


state 9

    (15) calc -> decrement . SEMICOLON
    (16) calc -> decrement . SEMICOLON calc

    SEMICOLON       shift and go to state 45


state 10

    (17) calc -> struct . SEMICOLON
    (18) calc -> struct . SEMICOLON calc

    SEMICOLON       shift and go to state 46


state 11

    (36) assignment -> DOUBLE_TYPE . NAME ASSIGNMENT double_expression
    (29) declaration -> DOUBLE_TYPE . NAME

    NAME            shift and go to state 47


state 12

    (34) declaration -> NAME . NAME
    (42) variable_update -> NAME . ASSIGNMENT double_expression
    (43) variable_update -> NAME . ASSIGNMENT int_expression
    (44) variable_update -> NAME . ASSIGNMENT string_expression
    (45) variable_update -> NAME . ASSIGNMENT CHAR
    (46) variable_update -> NAME . ASSIGNMENT bool_expression
    (19) var -> NAME .

    NAME            shift and go to state 48
    ASSIGNMENT      shift and go to state 49
    SEMICOLON       reduce using rule 19 (var -> NAME .)
    LESS            reduce using rule 19 (var -> NAME .)
    LESSEQUAL       reduce using rule 19 (var -> NAME .)
    GREATER         reduce using rule 19 (var -> NAME .)
    GREATEREQUAL    reduce using rule 19 (var -> NAME .)
    EQUALITY        reduce using rule 19 (var -> NAME .)
    PLUS            reduce using rule 19 (var -> NAME .)
    MINUS           reduce using rule 19 (var -> NAME .)
    MULTIPLY        reduce using rule 19 (var -> NAME .)
    DIVIDE          reduce using rule 19 (var -> NAME .)
    MOD             reduce using rule 19 (var -> NAME .)
    POWER           reduce using rule 19 (var -> NAME .)
    INCREMENT       reduce using rule 19 (var -> NAME .)
    DECREMENT       reduce using rule 19 (var -> NAME .)
    OR              reduce using rule 19 (var -> NAME .)
    AND             reduce using rule 19 (var -> NAME .)


state 13

    (25) expression -> double_expression .
    (49) double_expression -> double_expression . PLUS double_expression
    (50) double_expression -> double_expression . MINUS double_expression
    (51) double_expression -> double_expression . MULTIPLY double_expression
    (52) double_expression -> double_expression . DIVIDE double_expression
    (53) double_expression -> double_expression . MOD double_expression
    (54) double_expression -> double_expression . POWER double_expression

    SEMICOLON       reduce using rule 25 (expression -> double_expression .)
    LESS            reduce using rule 25 (expression -> double_expression .)
    LESSEQUAL       reduce using rule 25 (expression -> double_expression .)
    GREATER         reduce using rule 25 (expression -> double_expression .)
    GREATEREQUAL    reduce using rule 25 (expression -> double_expression .)
    EQUALITY        reduce using rule 25 (expression -> double_expression .)
    OR              reduce using rule 25 (expression -> double_expression .)
    AND             reduce using rule 25 (expression -> double_expression .)
    RB              reduce using rule 25 (expression -> double_expression .)
    COMMA           reduce using rule 25 (expression -> double_expression .)
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    MULTIPLY        shift and go to state 52
    DIVIDE          shift and go to state 53
    MOD             shift and go to state 54
    POWER           shift and go to state 55


state 14

    (37) assignment -> INT_TYPE . NAME ASSIGNMENT int_expression
    (30) declaration -> INT_TYPE . NAME

    NAME            shift and go to state 56


state 15

    (26) expression -> int_expression .
    (101) increment -> int_expression . INCREMENT
    (102) decrement -> int_expression . DECREMENT
    (58) int_expression -> int_expression . PLUS int_expression
    (59) int_expression -> int_expression . MINUS int_expression
    (60) int_expression -> int_expression . MULTIPLY int_expression
    (61) int_expression -> int_expression . DIVIDE int_expression
    (62) int_expression -> int_expression . MOD int_expression
    (63) int_expression -> int_expression . POWER int_expression

    SEMICOLON       reduce using rule 26 (expression -> int_expression .)
    LESS            reduce using rule 26 (expression -> int_expression .)
    LESSEQUAL       reduce using rule 26 (expression -> int_expression .)
    GREATER         reduce using rule 26 (expression -> int_expression .)
    GREATEREQUAL    reduce using rule 26 (expression -> int_expression .)
    EQUALITY        reduce using rule 26 (expression -> int_expression .)
    INCREMENT       shift and go to state 57
    DECREMENT       shift and go to state 58
    PLUS            shift and go to state 59
    MINUS           shift and go to state 60
    MULTIPLY        shift and go to state 61
    DIVIDE          shift and go to state 62
    MOD             shift and go to state 63
    POWER           shift and go to state 64


state 16

    (38) assignment -> STRING_TYPE . NAME ASSIGNMENT string_expression
    (31) declaration -> STRING_TYPE . NAME

    NAME            shift and go to state 65


state 17

    (27) expression -> string_expression .
    (78) string_expression -> string_expression . PLUS string_expression

    SEMICOLON       reduce using rule 27 (expression -> string_expression .)
    LESS            reduce using rule 27 (expression -> string_expression .)
    LESSEQUAL       reduce using rule 27 (expression -> string_expression .)
    GREATER         reduce using rule 27 (expression -> string_expression .)
    GREATEREQUAL    reduce using rule 27 (expression -> string_expression .)
    EQUALITY        reduce using rule 27 (expression -> string_expression .)
    OR              reduce using rule 27 (expression -> string_expression .)
    AND             reduce using rule 27 (expression -> string_expression .)
    RB              reduce using rule 27 (expression -> string_expression .)
    COMMA           reduce using rule 27 (expression -> string_expression .)
    PLUS            shift and go to state 66


state 18

    (39) assignment -> CHARACTER_TYPE . NAME ASSIGNMENT CHAR
    (32) declaration -> CHARACTER_TYPE . NAME

    NAME            shift and go to state 67


state 19

    (24) expression -> CHAR .

    SEMICOLON       reduce using rule 24 (expression -> CHAR .)
    LESS            reduce using rule 24 (expression -> CHAR .)
    LESSEQUAL       reduce using rule 24 (expression -> CHAR .)
    GREATER         reduce using rule 24 (expression -> CHAR .)
    GREATEREQUAL    reduce using rule 24 (expression -> CHAR .)
    EQUALITY        reduce using rule 24 (expression -> CHAR .)
    OR              reduce using rule 24 (expression -> CHAR .)
    AND             reduce using rule 24 (expression -> CHAR .)
    RB              reduce using rule 24 (expression -> CHAR .)
    COMMA           reduce using rule 24 (expression -> CHAR .)


state 20

    (40) assignment -> BOOL_TYPE . NAME ASSIGNMENT bool_expression
    (33) declaration -> BOOL_TYPE . NAME

    NAME            shift and go to state 68


state 21

    (28) expression -> bool_expression .
    (67) bool_expression -> bool_expression . OR bool_expression
    (68) bool_expression -> bool_expression . AND bool_expression

  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
    SEMICOLON       reduce using rule 28 (expression -> bool_expression .)
    LESS            reduce using rule 28 (expression -> bool_expression .)
    LESSEQUAL       reduce using rule 28 (expression -> bool_expression .)
    GREATER         reduce using rule 28 (expression -> bool_expression .)
    GREATEREQUAL    reduce using rule 28 (expression -> bool_expression .)
    EQUALITY        reduce using rule 28 (expression -> bool_expression .)
    RB              reduce using rule 28 (expression -> bool_expression .)
    COMMA           reduce using rule 28 (expression -> bool_expression .)
    OR              shift and go to state 69
    AND             shift and go to state 70

  ! OR              [ reduce using rule 28 (expression -> bool_expression .) ]
  ! AND             [ reduce using rule 28 (expression -> bool_expression .) ]


state 22

    (41) assignment -> empty .
    (35) declaration -> empty .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 35 (declaration -> empty .)
    SEMICOLON       reduce using rule 35 (declaration -> empty .)

  ! SEMICOLON       [ reduce using rule 41 (assignment -> empty .) ]


state 23

    (23) expression -> var .
    (48) double_expression -> var .
    (57) int_expression -> var .
    (77) string_expression -> var .
    (66) bool_expression -> var .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for LESS resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for LESSEQUAL resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for GREATER resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for GREATEREQUAL resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for EQUALITY resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for OR resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for AND resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for RB resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for COMMA resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for PLUS resolved using rule 48 (double_expression -> var .)
  ! reduce/reduce conflict for MINUS resolved using rule 48 (double_expression -> var .)
  ! reduce/reduce conflict for MULTIPLY resolved using rule 48 (double_expression -> var .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 48 (double_expression -> var .)
  ! reduce/reduce conflict for MOD resolved using rule 48 (double_expression -> var .)
  ! reduce/reduce conflict for POWER resolved using rule 48 (double_expression -> var .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for LESS resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for LESSEQUAL resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for GREATER resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for GREATEREQUAL resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for EQUALITY resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for OR resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for AND resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for RB resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for COMMA resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for PLUS resolved using rule 48 (double_expression -> var .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for LESS resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for LESSEQUAL resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for GREATER resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for GREATEREQUAL resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for EQUALITY resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for OR resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for AND resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for RB resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for COMMA resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for OR resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for AND resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for LESS resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for LESSEQUAL resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for GREATER resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for GREATEREQUAL resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for EQUALITY resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for RB resolved using rule 23 (expression -> var .)
  ! reduce/reduce conflict for COMMA resolved using rule 23 (expression -> var .)
    SEMICOLON       reduce using rule 23 (expression -> var .)
    LESS            reduce using rule 23 (expression -> var .)
    LESSEQUAL       reduce using rule 23 (expression -> var .)
    GREATER         reduce using rule 23 (expression -> var .)
    GREATEREQUAL    reduce using rule 23 (expression -> var .)
    EQUALITY        reduce using rule 23 (expression -> var .)
    OR              reduce using rule 23 (expression -> var .)
    AND             reduce using rule 23 (expression -> var .)
    RB              reduce using rule 23 (expression -> var .)
    COMMA           reduce using rule 23 (expression -> var .)
    PLUS            reduce using rule 48 (double_expression -> var .)
    MINUS           reduce using rule 48 (double_expression -> var .)
    MULTIPLY        reduce using rule 48 (double_expression -> var .)
    DIVIDE          reduce using rule 48 (double_expression -> var .)
    MOD             reduce using rule 48 (double_expression -> var .)
    POWER           reduce using rule 48 (double_expression -> var .)
    INCREMENT       reduce using rule 57 (int_expression -> var .)
    DECREMENT       reduce using rule 57 (int_expression -> var .)

  ! SEMICOLON       [ reduce using rule 48 (double_expression -> var .) ]
  ! LESS            [ reduce using rule 48 (double_expression -> var .) ]
  ! LESSEQUAL       [ reduce using rule 48 (double_expression -> var .) ]
  ! GREATER         [ reduce using rule 48 (double_expression -> var .) ]
  ! GREATEREQUAL    [ reduce using rule 48 (double_expression -> var .) ]
  ! EQUALITY        [ reduce using rule 48 (double_expression -> var .) ]
  ! OR              [ reduce using rule 48 (double_expression -> var .) ]
  ! AND             [ reduce using rule 48 (double_expression -> var .) ]
  ! RB              [ reduce using rule 48 (double_expression -> var .) ]
  ! COMMA           [ reduce using rule 48 (double_expression -> var .) ]
  ! PLUS            [ reduce using rule 57 (int_expression -> var .) ]
  ! MINUS           [ reduce using rule 57 (int_expression -> var .) ]
  ! MULTIPLY        [ reduce using rule 57 (int_expression -> var .) ]
  ! DIVIDE          [ reduce using rule 57 (int_expression -> var .) ]
  ! MOD             [ reduce using rule 57 (int_expression -> var .) ]
  ! POWER           [ reduce using rule 57 (int_expression -> var .) ]
  ! SEMICOLON       [ reduce using rule 57 (int_expression -> var .) ]
  ! LESS            [ reduce using rule 57 (int_expression -> var .) ]
  ! LESSEQUAL       [ reduce using rule 57 (int_expression -> var .) ]
  ! GREATER         [ reduce using rule 57 (int_expression -> var .) ]
  ! GREATEREQUAL    [ reduce using rule 57 (int_expression -> var .) ]
  ! EQUALITY        [ reduce using rule 57 (int_expression -> var .) ]
  ! OR              [ reduce using rule 57 (int_expression -> var .) ]
  ! AND             [ reduce using rule 57 (int_expression -> var .) ]
  ! RB              [ reduce using rule 57 (int_expression -> var .) ]
  ! COMMA           [ reduce using rule 57 (int_expression -> var .) ]
  ! PLUS            [ reduce using rule 77 (string_expression -> var .) ]
  ! SEMICOLON       [ reduce using rule 77 (string_expression -> var .) ]
  ! LESS            [ reduce using rule 77 (string_expression -> var .) ]
  ! LESSEQUAL       [ reduce using rule 77 (string_expression -> var .) ]
  ! GREATER         [ reduce using rule 77 (string_expression -> var .) ]
  ! GREATEREQUAL    [ reduce using rule 77 (string_expression -> var .) ]
  ! EQUALITY        [ reduce using rule 77 (string_expression -> var .) ]
  ! OR              [ reduce using rule 77 (string_expression -> var .) ]
  ! AND             [ reduce using rule 77 (string_expression -> var .) ]
  ! RB              [ reduce using rule 77 (string_expression -> var .) ]
  ! COMMA           [ reduce using rule 77 (string_expression -> var .) ]
  ! OR              [ reduce using rule 66 (bool_expression -> var .) ]
  ! AND             [ reduce using rule 66 (bool_expression -> var .) ]
  ! SEMICOLON       [ reduce using rule 66 (bool_expression -> var .) ]
  ! LESS            [ reduce using rule 66 (bool_expression -> var .) ]
  ! LESSEQUAL       [ reduce using rule 66 (bool_expression -> var .) ]
  ! GREATER         [ reduce using rule 66 (bool_expression -> var .) ]
  ! GREATEREQUAL    [ reduce using rule 66 (bool_expression -> var .) ]
  ! EQUALITY        [ reduce using rule 66 (bool_expression -> var .) ]
  ! RB              [ reduce using rule 66 (bool_expression -> var .) ]
  ! COMMA           [ reduce using rule 66 (bool_expression -> var .) ]


state 24

    (20) printoutput -> PRINT . LB printexpression RB

    LB              shift and go to state 71


state 25

    (55) double_expression -> LB . double_expression RB
    (64) int_expression -> LB . int_expression RB
    (75) bool_expression -> LB . bool_expression RB
    (47) double_expression -> . DOUBLE
    (48) double_expression -> . var
    (49) double_expression -> . double_expression PLUS double_expression
    (50) double_expression -> . double_expression MINUS double_expression
    (51) double_expression -> . double_expression MULTIPLY double_expression
    (52) double_expression -> . double_expression DIVIDE double_expression
    (53) double_expression -> . double_expression MOD double_expression
    (54) double_expression -> . double_expression POWER double_expression
    (55) double_expression -> . LB double_expression RB
    (56) int_expression -> . INT
    (57) int_expression -> . var
    (58) int_expression -> . int_expression PLUS int_expression
    (59) int_expression -> . int_expression MINUS int_expression
    (60) int_expression -> . int_expression MULTIPLY int_expression
    (61) int_expression -> . int_expression DIVIDE int_expression
    (62) int_expression -> . int_expression MOD int_expression
    (63) int_expression -> . int_expression POWER int_expression
    (64) int_expression -> . LB int_expression RB
    (65) bool_expression -> . BOOL
    (66) bool_expression -> . var
    (67) bool_expression -> . bool_expression OR bool_expression
    (68) bool_expression -> . bool_expression AND bool_expression
    (69) bool_expression -> . expression LESS expression
    (70) bool_expression -> . expression LESSEQUAL expression
    (71) bool_expression -> . expression GREATER expression
    (72) bool_expression -> . expression GREATEREQUAL expression
    (73) bool_expression -> . expression EQUALITY expression
    (74) bool_expression -> . NOT bool_expression
    (75) bool_expression -> . LB bool_expression RB
    (19) var -> . NAME
    (23) expression -> . var
    (24) expression -> . CHAR
    (25) expression -> . double_expression
    (26) expression -> . int_expression
    (27) expression -> . string_expression
    (28) expression -> . bool_expression
    (76) string_expression -> . STRING
    (77) string_expression -> . var
    (78) string_expression -> . string_expression PLUS string_expression

    DOUBLE          shift and go to state 28
    LB              shift and go to state 25
    INT             shift and go to state 29
    BOOL            shift and go to state 31
    NOT             shift and go to state 32
    NAME            shift and go to state 77
    CHAR            shift and go to state 19
    STRING          shift and go to state 30

    double_expression              shift and go to state 72
    int_expression                 shift and go to state 73
    bool_expression                shift and go to state 74
    var                            shift and go to state 75
    expression                     shift and go to state 76
    string_expression              shift and go to state 17

state 26

    (94) dowhile_expression -> DO . LP insidewhile RP WHILE LB condition RB
    (95) dowhile_expression -> DO . LP dowhile_expression RP WHILE LB condition RB

    LP              shift and go to state 78


state 27

    (100) struct -> STRUCT . NAME LP insidestruct RP
